--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Learn.co's introduction to looping in JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "start": "node ./bin/www",
+    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json --timeout 1000000000"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/learn-co-curriculum/js-looping-and-iteration-looping-code-along.git"
